# flight-passenger-prediction

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/core/: predictor.py
backend/app/routers/: predictions.py
backend/app/schemas/: prediction.py
monitoring/: ml_monitoring.py
monitoring/reports/: data_drift_report.html  feature_drift_report.html  model_performance_report.html  monitoring_dashboard.html  monitoring_summary.json
poc/: streamlit_app.py  train_models.py
tests/: conftest.py  test_api.py  test_features.py  test_predictor.py
