[project]
name = "flight-passenger-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.20",
    "fastapi>=0.135.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]
